sprint4/tests/error/23_div0.py
# Division by 0. This only works with [OPT_ON]
#
a: int = 1 / 0
b: int = 1 + 1
print(a)
